fix transaction name overflow

--- a/frontend/src/pages/transactions/main/TransactionsTable.module.scss
+++ b/frontend/src/pages/transactions/main/TransactionsTable.module.scss
@@ -5,5 +5,8 @@
   max-width: 15vw;
   min-width: 10vw;
   display: inline-block;
-  
+}
+
+.nameColumn {
+  overflow: hidden;
 }
